# codemapper

./: .gitignore  Cargo.toml  README.md
.marbles/: agent  marbles.csv
src/: blame.rs  cache.rs  callgraph.rs  diff.rs  fast_search.rs  git.rs  impact.rs  implements.rs  index.rs  indexer.rs  main.rs  models.rs  output.rs  schema.rs  snapshot.rs  types.rs
src/parser/: c.rs  go.rs  java.rs  javascript.rs  markdown.rs  mod.rs  python.rs  rust.rs  typescript.rs
test_files/: Test.java  example.c  example.go  sample.py  test.js  test.py  test_python.py  test_rust.rs
